--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -797,6 +797,7 @@
     opacity: 0;
   }
   .bay-tree {
+    overflow: hidden;
     margin-top: 3.5rem;
   }
   &.effect {
@@ -1067,96 +1068,7 @@
     width: 48%;
   }
 }
-@include media-breakpoint-down(md) {
-  .main-conts-04 ul.bbs-list {
-    flex-wrap: wrap;
-  }
-  .main-conts-04 ul.bbs-list > li {
-    width: 48%;
-    padding-top: rem(50px);
-  }
-}
-@include media-breakpoint-down(sm) {
-  .left-nav {
-    height: auto;
-  }
-  .fullpage-wrapper {
-    margin-top: rem(60px);
-  }
-  .fullpage-wrapper .section:not(.main-visual) .container-fluid {
-    padding-top: rem(60px);
-  }
-  .main-visual {
-    height: calc(100vh - 3.75rem);
-    .swiper-container {
-      // top: 50%;
-      width: 100%;
-      height: 100%;
-    }
-    div[class*="main-visual-bg"] {
-      flex: 1;
-      width: 100%;
-      height: 100%;
-      // max-height: rem(360px);
-      max-height: 100%;
-      // margin-bottom: 80px;
-    }
-    div[class*="main-visual-img"] {
-      width: 100%;
-      max-width: calc(100% - 2.5rem);
-      max-height: 60%;
-      // max-height: 56%;
-      margin: auto rem(20px) rem(50px) rem(20px);
-    }
-    .cont-box {
-      flex-direction: column-reverse;
-      justify-content: flex-end;
-      position: relative;
-      // width: calc(100% - 1.25rem * 2);
-      width: 100%;
-      max-width: unset;
-      margin: 0;
-      // margin: 1.75rem auto 0 auto;
-    }
-    .caption {
-      flex: none;
-      width: 100%;
-      margin: 0;
-      padding: rem(20px);
-      .logo {
-        width: rem(37px);
-        height: rem(10px);
-        margin: 0 0 rem(8px) 0;
-        background-size: contain;
-      }
-      strong {
-        margin-bottom: 0;
-        font-size: rem(20px);
-        line-height: rem(30px);
-      }
-      p {
-        font-size: rem(12px);
-        line-height: rem(16px);
-      }
-    }
-    .swiper-control-bar {
-      bottom: 0;
-      width: 100%;
-      margin: 0;
-    }
-    .swiper-pagination-fraction {
-      display: none;
-    }
-  }
-  //
-  //
-  //
-  .main-visual .carousel-control-prev-icon,
-  .main-visual .carousel-control-next-icon {
-    width: rem(50px);
-    height: rem(50px);
-    background-size: rem(10px) auto;
-  }
+@include media-breakpoint-down(lg) {
   .exchange-calc {
     position: relative;
     left: inherit;
@@ -1181,12 +1093,12 @@
     font-size: rem(22px);
     line-height: 1.7;
   }
-
   .main-conts-02 {
     padding-bottom: rem(40px);
     letter-spacing: rem(-1.5px);
     background-image: unset;
     .card-wrap {
+      overflow: auto hidden;
       &.bay-tree {
         margin-top: 0.75rem;
         .card-item {
@@ -1298,9 +1210,6 @@
     right: rem(25px);
     bottom: rem(30px);
   }
-  // .footer{padding:rem(56px) 0 rem(30px); }
-  // .footer>.d-flex{flex-direction: column;}
-  // .footer .logo-img{width:200px;}
   .main-conts-07 {
     .card-wrap {
       &.ci-banner {
@@ -1355,152 +1264,78 @@
   .footer .nav {
     margin-top: rem(35.4px);
   }
-
-  // 20211027
-  // .main-conts-02 {
-  //     background-color: #f5f9fc;
-  //     .float-right {
-  //         flex-direction: column !important;
-  //         width: 100%;
-  //         height: auto;
-  //     }
-  //     .card-wrap {
-  //         &.bay-tree {
-  //                 margin-top: 0.75rem;
-  //                 margin-bottom: 1.5rem;
-  //             .card-item {
-  //                     margin-left: 0.625rem;
-  //                 &:first-child {
-  //                     margin-left: 0;
-  //                 }
-  //                 &:before,
-  //                 &:after {
-  //                     width: 3.125rem;
-  //                     height: 4.125rem;
-  //                     background-size: cover;
-  //                 }
-  //             }
-  //             .card-content {
-  //                 padding: 1.5rem 1rem 1rem 1rem;
-  //             }
-  //         }
-  //     }
-  // }
-  // .main-conts-03 {
-  //     .float-right {
-  //         flex-direction: column !important;
-  //         width: 100%;
-  //         height: auto;
-  //     }
-  // }
-  // .main-conts-04 {
-  //     padding: 0;
-  //     .float-right {
-  //         flex-direction: column !important;
-  //         width: 100%;
-  //         height: auto;
-  //     }
-  //     img {
-  //         width: 10.125rem;
-  //         height: 11.0625rem;
-  //         margin: -2.625rem 0 0 10.625rem;
-  //     }
-  //     .box--gradient {
-  //             margin: 2.125rem 0 3.25rem;
-  //         ul {
-  //             width: 100%;
-  //         }
-  //     }
-  // }
-  // .main-conts-05 {
-  //     .card-wrap {
-  //         margin: 1.5rem 0 3.75rem 0;
-  //     }
-  //     .card-item {
-  //             width: 100%;
-  //             margin: 0.75rem 0 0 0;
-  //         &:first-child {
-  //             margin: 0;
-  //         }
-  //         &:nth-child(2) {
-  //             .card-img {
-  //                 height: 3rem;
-  //             }
-  //         }
-  //         &:nth-child(3) {
-  //             .card-img {
-  //                 height: 3.25rem;
-  //             }
-  //         }
-  //         &:nth-child(4) {
-  //             .card-img {
-  //                 width: 3.4375rem;
-  //                 height: 3.5rem;
-  //             }
-  //         }
-  //         &:nth-child(2n - 1) {
-  //             margin: 0.75rem 0 0 0;
-  //         }
-  //         &:nth-child(2n) {
-  //             margin: 0.75rem 0 0 0;
-  //         }
-  //     }
-  //     .card-content {
-  //         padding: 1.875rem 0.625rem 2.5rem 0.625rem;
-  //     }
-  //     .card-img {
-  //         width: 3.5rem;
-  //         height: 3.5rem;
-  //     }
-  //     .card-title {
-  //         margin: 0.5rem 0 1.5rem;
-  //         font-size: 1.1428rem;
-  //         line-height: 1.7143rem;
-  //     }
-  //     .card-txt {
-  //         font-size: 0.75rem;
-  //         line-height: 1.4286rem;
-  //     }
-  // }
-  // .main-conts-06 {
-  //     background-color: #1e4ba3;
-  //     .float-right {
-  //         flex-direction: column !important;
-  //         width: 100%;
-  //         height: auto;
-  //     }
-  //     .main-title {
-  //             color: #ffffff;
-  //         &--txt {
-  //             color: #ffffff;
-  //         }
-  //     }
-  //     .card-wrap {
-  //         &.business-card {
-  //             margin-top: 3.1428rem;
-  //             margin-bottom: 2.5714rem;
-  //         }
-  //     }
-  // }
-  // .main-conts-07 {
-  //     .float-right {
-  //         flex-direction: column !important;
-  //         width: 100%;
-  //         height: auto;
-  //     }
-  //     .card-wrap {
-  //         &.ci-banner {
-  //             .card-item {
-  //                 width: 100%;
-  //             }
-  //         }
-  //     }
-  //     .info-intro-link {
-  //         // margin: 11.5rem 0 9rem;
-  //     }
-  // }
-  // 20211027
 }
+@include media-breakpoint-down(md) {
+  .fullpage-wrapper {
+    margin-top: rem(60px);
+  }
+  .fullpage-wrapper .section:not(.main-visual) .container-fluid {
+    padding-top: rem(60px);
+  }
+  .main-visual {
+    height: calc(100vh - 3.75rem);
+    .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+    div[class*="main-visual-bg"] {
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      max-height: 100%;
+    }
+    div[class*="main-visual-img"] {
+      width: 100%;
+      max-width: calc(100% - 2.5rem);
+      max-height: 60%;
+      margin: auto rem(20px) rem(50px) rem(20px);
+    }
+    .cont-box {
+      flex-direction: column-reverse;
+      justify-content: flex-end;
+      position: relative;
+      width: 100%;
+      max-width: unset;
+      margin: 0;
+    }
+    .caption {
+      flex: none;
+      width: 100%;
+      margin: 0;
+      padding: rem(20px);
+      .logo {
+        width: rem(37px);
+        height: rem(10px);
+        margin: 0 0 rem(8px) 0;
+        background-size: contain;
+      }
+      strong {
+        margin-bottom: 0;
+        font-size: rem(20px);
+        line-height: rem(30px);
+      }
+      p {
+        font-size: rem(12px);
+        line-height: rem(16px);
+      }
+    }
+    .swiper-control-bar {
+      bottom: 0;
+      width: 100%;
+      margin: 0;
+    }
+    .swiper-pagination-fraction {
+      display: none;
+    }
+  }
+  .main-visual .carousel-control-prev-icon,
+  .main-visual .carousel-control-next-icon {
+    width: rem(50px);
+    height: rem(50px);
+    background-size: rem(10px) auto;
+  }
+}
+
 @keyframes bounceScale {
   0% {
     transform: scale(0.9);
