* 모바일 버전 대응 * 반응형 버그 대응

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1212,6 +1212,7 @@
   }
   .main-conts-07 {
     .card-wrap {
+      text-align: center;
       &.ci-banner {
         margin: 0.5rem rem(-4px) 0 rem(-4px);
         .card-item {
