--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -281,176 +281,6 @@
     }
   }
 }
-.exchange-calc {
-  // display: none;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-640px, -50%);
-  padding: rem(24px) rem(20px);
-  width: rem(440px);
-  height: rem(617px);
-  border-radius: rem(16px);
-  background-color: #ffffff;
-  z-index: 99;
-  box-shadow: 0 2px 16px 2px rgba(105, 105, 105, 0.5);
-  .desc {
-    font-family: "Noto Sans KR";
-    color: #231916;
-    h2 {
-      margin-top: rem(4px);
-      font-size: rem(26px);
-      font-weight: bold;
-      line-height: rem(38px);
-      letter-spacing: rem(-1.2px);
-    }
-    p {
-      margin-top: rem(15px);
-      font-size: rem(18px);
-      font-weight: bold;
-      line-height: rem(30px);
-    }
-    p > span {
-      display: block;
-      font-weight: lighter;
-      line-height: 1.3;
-    }
-  }
-  .form-group {
-    margin: rem(16px) 0 0;
-    border: 0;
-    background: transparent;
-    h5 {
-      padding-left: rem(10px);
-      font-family: "Noto Sans KR";
-      font-size: rem(14px);
-      line-height: rem(20px);
-      font-weight: bold;
-      color: #989898;
-    }
-    .cal-tooltip {
-      position: absolute;
-      right: rem(-30px);
-      top: rem(-27px);
-      width: rem(129px);
-      height: rem(32px);
-      line-height: rem(32px);
-      background: url(../images/main-cal-tooltip-129x32-3x.png) no-repeat left
-        center;
-      background-size: 100% auto;
-      font-family: "Apple SD Gothic Neo";
-      font-size: rem(14px);
-      color: #ffffff;
-      text-align: center;
-    }
-    .input-group {
-      margin-top: rem(10px);
-      .input-group-prepend {
-        padding: 0 rem(10px) 0 rem(14px);
-      }
-      .dropdown {
-        width: rem(240px);
-        .btn.dropdown-toggle {
-          text-align: left;
-          white-space: initial;
-          & > span {
-            display: inline-block;
-            line-height: rem(20px);
-            max-height: rem(40px);
-            overflow: hidden;
-          }
-        }
-        &.currency-dropdown {
-          width: auto;
-          .btn.dropdown-toggle {
-            padding: 0 rem(24px) 0 0;
-            border-radius: 0;
-            border: 0;
-            background: transparent
-              url(../images/icon-arrow-down-gray-25x25-3x.png) no-repeat right
-              5px center;
-            background-size: rem(20px) auto;
-          }
-          .dropdown-menu {
-            width: auto;
-            min-width: inherit;
-          }
-          .dropdown-item {
-            padding: rem(10px) rem(15px);
-          }
-        }
-      }
-      .form-control-plaintext {
-        font-family: Lato;
-        font-size: rem(24px);
-        font-weight: bold;
-        color: #161616;
-        border: 0;
-        border-radius: 0;
-        &:focus {
-          color: #3b57f1;
-          outline: 0;
-        }
-      }
-    }
-  }
-  .sending {
-    position: relative;
-    margin: rem(16px) 0 rem(16px) rem(30px);
-    padding: rem(10px) 0 rem(16px) 0;
-    border-left: 2px dotted #d4d4d4;
-    &::before {
-      display: block;
-      position: absolute;
-      left: -17px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: rem(33px);
-      height: rem(33px);
-      content: "";
-      background: url(../images/ico-send-money-33x33-3x.png) no-repeat left
-        center;
-      background-size: rem(33px) rem(33px);
-    }
-    .input-group {
-      margin: 0;
-    }
-    img {
-      width: 33px;
-      height: 33px;
-    }
-    .dropdown {
-      margin-left: 53px;
-      & + .dropdown {
-        margin-top: 3px;
-      }
-    }
-  }
-  .result {
-    margin-top: rem(20px);
-    padding: rem(20px) 0 0 rem(20px);
-    list-style: none;
-    border-top: 2px dotted #d4d4d4;
-    li {
-      margin-bottom: 5px;
-      line-height: 24px;
-      font-family: "Apple SD Gothic Neo";
-      font-size: rem(14px);
-      color: #161616;
-      & > img {
-        width: rem(24px);
-        height: rem(24px);
-        margin-right: rem(10px);
-      }
-      & > img.img-coupon {
-        width: rem(41px);
-        height: rem(33px);
-        margin-left: rem(8px);
-        margin-right: 0;
-      }
-    }
-  }
-}
 .currency {
   display: inline-block;
   padding: 0 rem(4px) 0 rem(67px);
@@ -1057,10 +887,6 @@
   .main-visual .swiper-container {
     height: 90vh;
   }
-  .exchange-calc {
-    left: rem(20px);
-    transform: translate(0, -50%);
-  }
   .main-conts-01 {
     padding: rem(142px) 0 rem(152px);
   }
@@ -1069,13 +895,73 @@
   }
 }
 @include media-breakpoint-down(lg) {
-  .exchange-calc {
-    position: relative;
-    left: inherit;
-    top: rem(20px);
-    margin: 0 auto;
-    width: 90%;
-    transform: translate(0, 0);
+  .fullpage-wrapper {
+    margin-top: rem(60px);
+  }
+  .fullpage-wrapper .section:not(.main-visual) .container-fluid {
+    padding-top: rem(60px);
+  }
+  .main-visual {
+    height: calc(100vh - 3.75rem);
+    .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+    div[class*="main-visual-bg"] {
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      max-height: 100%;
+    }
+    div[class*="main-visual-img"] {
+      width: 100%;
+      max-width: calc(100% - 2.5rem);
+      max-height: 60%;
+      margin: auto rem(20px) rem(50px) rem(20px);
+    }
+    .cont-box {
+      flex-direction: column-reverse;
+      justify-content: flex-end;
+      position: relative;
+      width: 100%;
+      max-width: unset;
+      margin: 0;
+    }
+    .caption {
+      flex: none;
+      width: 100%;
+      margin: 0;
+      padding: rem(20px);
+      .logo {
+        width: rem(37px);
+        height: rem(10px);
+        margin: 0 0 rem(8px) 0;
+        background-size: contain;
+      }
+      strong {
+        margin-bottom: 0;
+        font-size: rem(20px);
+        line-height: rem(30px);
+      }
+      p {
+        font-size: rem(12px);
+        line-height: rem(16px);
+      }
+    }
+    .swiper-control-bar {
+      bottom: 0;
+      width: 100%;
+      margin: 0;
+    }
+    .swiper-pagination-fraction {
+      display: none;
+    }
+  }
+  .main-visual .carousel-control-prev-icon,
+  .main-visual .carousel-control-next-icon {
+    width: rem(50px);
+    height: rem(50px);
+    background-size: rem(10px) auto;
   }
   .main-conts-01 {
     padding: 0 0 rem(20px);
@@ -1266,76 +1152,8 @@
     margin-top: rem(35.4px);
   }
 }
-@include media-breakpoint-down(md) {
-  .fullpage-wrapper {
-    margin-top: rem(60px);
-  }
-  .fullpage-wrapper .section:not(.main-visual) .container-fluid {
-    padding-top: rem(60px);
-  }
-  .main-visual {
-    height: calc(100vh - 3.75rem);
-    .swiper-container {
-      width: 100%;
-      height: 100%;
-    }
-    div[class*="main-visual-bg"] {
-      flex: 1;
-      width: 100%;
-      height: 100%;
-      max-height: 100%;
-    }
-    div[class*="main-visual-img"] {
-      width: 100%;
-      max-width: calc(100% - 2.5rem);
-      max-height: 60%;
-      margin: auto rem(20px) rem(50px) rem(20px);
-    }
-    .cont-box {
-      flex-direction: column-reverse;
-      justify-content: flex-end;
-      position: relative;
-      width: 100%;
-      max-width: unset;
-      margin: 0;
-    }
-    .caption {
-      flex: none;
-      width: 100%;
-      margin: 0;
-      padding: rem(20px);
-      .logo {
-        width: rem(37px);
-        height: rem(10px);
-        margin: 0 0 rem(8px) 0;
-        background-size: contain;
-      }
-      strong {
-        margin-bottom: 0;
-        font-size: rem(20px);
-        line-height: rem(30px);
-      }
-      p {
-        font-size: rem(12px);
-        line-height: rem(16px);
-      }
-    }
-    .swiper-control-bar {
-      bottom: 0;
-      width: 100%;
-      margin: 0;
-    }
-    .swiper-pagination-fraction {
-      display: none;
-    }
-  }
-  .main-visual .carousel-control-prev-icon,
-  .main-visual .carousel-control-next-icon {
-    width: rem(50px);
-    height: rem(50px);
-    background-size: rem(10px) auto;
-  }
-}
+// @include media-breakpoint-down(md) {
+// }
 
 @keyframes bounceScale {
   0% {
