--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -22,6 +22,7 @@
 @import "./main.scss";
 @import "./sub.scss";
 @import "./hanpasscard.scss";
+@import "./dashboard.scss";
 
 @import "./jspark.scss";
 @import "./krlee.scss";
